--- a/min-resa.css
+++ b/min-resa.css
@@ -1,11 +1,9 @@
 
-/* min-resa.css */
 #min-resa {
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  margin-top: 20px;
+  border-top: 1px solid #ccc;
+  margin-top: 2em;
+  padding-top: 1em;
 }
 #min-resa h2 {
-  color: #333;
+  color: #003366;
 }
