--- a/min-resa.css
+++ b/min-resa.css
@@ -1,9 +1,1 @@
-
-#min-resa {
-  border-top: 1px solid #ccc;
-  margin-top: 2em;
-  padding-top: 1em;
-}
-#min-resa h2 {
-  color: #003366;
-}
+/* Stilar för min resa */
