--- a/ekonomi.css
+++ b/ekonomi.css
@@ -1,13 +1,1 @@
-
-/* ekonomi.css */
-#ekonomi {
-  background-color: #f9f9ff;
-  border: 1px solid #ccc;
-  padding: 20px;
-  margin-top: 20px;
-}
-.ekonomi-panel input {
-  margin: 5px 0;
-  padding: 6px;
-  width: 200px;
-}
+/* CSS för ekonomisektionen */
